<resources>
    <string name="app_name">Proj_Android</string>
    <string name="entrar">BEM VINDO</string>
    <string name="nome_do_utilizador">Nome do Utilizador</string>
    <string name="palavra_passe">Palavra-Passe</string>
    <string name="entrarbtn">Entrar</string>
    <string name="registar">Registar</string>
    <string name="notas_pessoais">Notas Pessoais</string>
    <string name="notas">NOTAS</string>
    <string name="titulo">Titulo</string>
    <string name="introduzir_titulo">Introduzir Titulo</string>
    <string name="descri_o">Descrição</string>
    <string name="introduzir_descri_o">Introduzir Descrição</string>
    <string name="tipo">Tipo</string>
    <string name="introduzir_tipo_de_nota">Introduzir Tipo de Nota</string>
    <string name="guardar">Guardar</string>
    <string name="apagar">Apagar</string>
    <string name="apagarnotas">Apagando as notas...</string>
    <string name="updatenao">Não foi possivel fazer o update</string>
    <string name="notanao">Nota não pode ser guardada, todos os campos têm que ser preenchidos</string>
    <string name="apagar_todas_as_notas">Apagar todas as notas</string>
    <string name="title_activity_nota">NotaActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_maps">Map</string>
</resources>
