<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".NewNotaActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_centerHorizontal="true"
                android:text="@string/notas"
                android:textColor="@color/Black"
                android:textSize="60sp"
                android:id="@+id/txtNota"/>

            <TextView
                android:layout_below="@+id/txtNota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/titulo"
                android:textColor="@color/Black"
                android:textSize="40sp"
                android:id="@+id/txtTitulo"/>

            <EditText
                android:id="@+id/editTitulo"
                android:layout_below="@id/txtTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:hint="@string/introduzir_titulo"/>

            <TextView
                android:layout_below="@+id/editTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/descri_o"
                android:textColor="@color/Black"
                android:textSize="40sp"
                android:id="@+id/txtDesc"/>

            <EditText
                android:id="@+id/editDesc"
                android:layout_width="match_parent"
                android:layout_height="134dp"
                android:layout_below="@+id/txtDesc"
                android:hint="@string/introduzir_descri_o" />

            <TextView
                android:layout_below="@+id/editDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:text="@string/tipo"
                android:textColor="@color/Black"
                android:textSize="40sp"
                android:id="@+id/txtTipo"/>

            <EditText
                android:id="@+id/editTipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtTipo"
                android:layout_marginTop="22dp"
                android:hint="@string/introduzir_tipo_de_nota" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTipo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:text="@string/guardar" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>