<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="221dp"
                android:src="@mipmap/ic_bloco"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="220dp"
                android:text="@string/entrar"
                android:textStyle="bold"
                android:textSize="40sp"
                android:textColor="@color/Black"
                android:layout_centerHorizontal="true"
                />


            <TextView
                android:id="@+id/TxtUtilizador"
                android:layout_below="@+id/titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="15dp"
                android:text="@string/nome_do_utilizador"
                android:textSize="15sp"
                android:textColor="@color/Black"/>

            <EditText
                android:id="@+id/editUtilizador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/TxtUtilizador"
                android:layout_below="@+id/titulo"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="5dp"
                android:hint="@string/nome_do_utilizador"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/txtPasse"
                android:layout_below="@+id/TxtUtilizador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="15dp"
                android:text="@string/palavra_passe"
                android:textSize="15sp"
                android:textColor="@color/Black"/>

            <EditText
                android:id="@+id/editPasse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/txtPasse"
                android:layout_marginTop="35dp"
                android:layout_marginLeft="5dp"
                android:layout_below="@+id/editUtilizador"
                android:inputType="textPassword"
                android:hint="@string/palavra_passe"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/txtEmail"
                android:layout_below="@+id/txtPasse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="15dp"
                android:text="Email"
                android:textSize="15sp"
                android:textColor="@color/Black"/>

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/txtEmail"
                android:layout_marginTop="35dp"
                android:layout_marginLeft="5dp"
                android:layout_below="@+id/editPasse"
                android:hint="Email"
                android:textAlignment="center"/>

            <Button
                android:id="@+id/btnEntrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editEmail"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:text="@string/entrarbtn"
                android:onClick="btnMapa"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnRegisto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/registar"
                android:textSize="20sp"
                android:layout_below="@+id/btnEntrar"
                />

            <Button
                android:id="@+id/btnNotas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnRegisto"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/notas_pessoais"
                android:onClick="btnNotas"
                android:textSize="20sp" />
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>