<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/registo"
                android:layout_marginLeft="120dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:text="REGISTO"
                android:textColor="@color/Black"
                android:textSize="40sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/TxtUtilizador"
                android:layout_below="@+id/registo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="15dp"
                android:text="@string/nome_do_utilizador"
                android:textSize="15sp"
                android:textColor="@color/Black"/>

            <EditText
                android:id="@+id/editUtilizador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/TxtUtilizador"
                android:layout_below="@+id/registo"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="5dp"
                android:hint="@string/nome_do_utilizador"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/txtPasse"
                android:layout_below="@+id/TxtUtilizador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="15dp"
                android:text="@string/palavra_passe"
                android:textSize="15sp"
                android:textColor="@color/Black"/>

            <EditText
                android:id="@+id/editPasse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/txtPasse"
                android:layout_marginTop="35dp"
                android:layout_marginLeft="5dp"
                android:layout_below="@+id/editUtilizador"
                android:inputType="textPassword"
                android:hint="@string/palavra_passe"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/txtEmail"
                android:layout_below="@+id/txtPasse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="15dp"
                android:text="Email"
                android:textSize="15sp"
                android:textColor="@color/Black"/>

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/txtEmail"
                android:layout_marginTop="35dp"
                android:layout_marginLeft="5dp"
                android:layout_below="@+id/editPasse"
                android:hint="Email"
                android:textAlignment="center"/>

            <Button
                android:id="@+id/btnReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editEmail"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:text="@string/entrarbtn"
                android:onClick="btnRegisto"
                android:textSize="20sp" />

        </RelativeLayout>
    </ScrollView>


</RelativeLayout>